--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -529,7 +529,7 @@ body.open .header__wrapper {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  color: white;
+  color: white !important;
   font-size: 20px;
   font-weight: 300;
   max-width: 125px;
