--- a/styles/contacts.scss
+++ b/styles/contacts.scss
@@ -130,7 +130,7 @@
     .contact__name {
       display: flex;
       flex-wrap: wrap;
-      color: white;
+      color: white !important;
       font-size: 20px;
       font-weight: 300;
       max-width: 125px;
