--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,7 +16,7 @@ main {
       position: absolute;
       top: 0;
       right: 0;
-      max-width: 100%;
+      width: 100%;
       height: auto;
 
       @media (max-width: 1308px) {
