--- a/styles/products.css
+++ b/styles/products.css
@@ -4,6 +4,7 @@
   margin: 0;
   border: 0;
   font-family: "Teko", sans-serif;
+  font-display: swap;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
