--- a/styles/about.css
+++ b/styles/about.css
@@ -4,6 +4,7 @@
   margin: 0;
   border: 0;
   font-family: "Teko", sans-serif;
+  font-display: swap;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -210,6 +211,14 @@ ul li {
           flex-direction: column;
   gap: 9px;
 }
+.header .list__items .list__item {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.header .list__items .list__item:hover {
+  -webkit-transform: translateX(-10px);
+          transform: translateX(-10px);
+}
 @media (max-width: 767px) {
   .header .list__items {
     -webkit-box-pack: center;
@@ -225,7 +234,7 @@ ul li {
     gap: 25px;
   }
 }
-.header .list__item a {
+.header .link {
   font-size: 24px;
   font-weight: 300;
 }
@@ -376,7 +385,7 @@ main .img-wrapper .main-img {
   position: absolute;
   top: 0;
   right: 0;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 @media (max-width: 1308px) {
