--- a/styles/about.css
+++ b/styles/about.css
@@ -374,17 +374,10 @@ main {
   }
 }
 main .img-wrapper {
-  min-height: 610px;
-}
-@media (max-width: 1308px) {
-  main .img-wrapper {
-    min-height: unset;
-  }
+  text-align: right;
 }
 main .img-wrapper .main-img {
-  position: absolute;
-  top: 0;
-  right: 0;
+  max-width: 1485px;
   width: 100%;
   height: auto;
 }
